--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "vue": "^2.6.11",
     "vue-iframes": "0.0.13",
     "vue-router": "^3.2.0",
+    "vue2-google-maps": "^0.10.7",
+    "vuejs-google-maps": "0.0.10",
     "vuetify": "^2.2.11",
     "vuex": "^3.4.0"
   },
